# my-ai-projects

./: Dockerfile  README.md  docker-compose.yml  table_mapping.json
scoras-academy-langgraph-finances-agent/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
scoras-academy-langgraph-finances-agent/src/: app.py  graph_manager.py
src/: duckdb_manager.py  google_sheets_manager.py
