[project]
name = "scoras-academy-langgraph-finances-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "gspread>=6.2.0",
    "langchain-google-genai>=2.1.3",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
